# TraceRecorderSource

./: CMakeLists.txt  Doxyfile  Kconfig  LICENSE.spdx  README.md  idf_component.yml  trcAssert.c  trcCounter.c  trcDependency.c  trcDiagnostics.c  trcEntryTable.c  trcError.c  trcEvent.c  trcEventBuffer.c  trcExtension.c  trcHardwarePort.c  trcHeap.c  trcISR.c  trcInternalBuffer.c  trcInternalEventBuffer.c  trcInterval.c  trcMultiCoreEventBuffer.c  trcObject.c  trcPrint.c  trcRunnable.c  trcSnapshotRecorder.c  trcStackMonitor.c  trcStateMachine.c  trcStaticBuffer.c  trcStreamingRecorder.c  trcString.c  trcTask.c  trcTaskMonitor.c  trcTimestamp.c
config/: Kconfig  trcConfig.h  trcSnapshotConfig.h  trcStreamingConfig.h
config/Kconfig/: Kconfig  Kconfig.BufferAllocation  Kconfig.Debug  Kconfig.EntryTable  Kconfig.ISR  Kconfig.InternalBuffer  Kconfig.StackMonitor  Kconfig.StartMode  Kconfig.StreamPort  Kconfig.TaskMonitor  Kconfig.TraceControl  Kconfig.TraceCoverage
docs/: BareMetal_2config_2trcKernelPortConfig_8h_source.html  BareMetal_2config_2trcKernelPortSnapshotConfig_8h_source.html  BareMetal_2config_2trcKernelPortStreamingConfig_8h_source.html  BareMetal_2include_2trcKernelPort_8h_source.html  ESP-IDF__FreeRTOS_2config_2trcKernelPortConfig_8h_source.html  ESP-IDF__FreeRTOS_2config_2trcKernelPortSnapshotConfig_8h_source.html  ESP-IDF__FreeRTOS_2config_2trcKernelPortStreamingConfig_8h_source.html  ESP-IDF__FreeRTOS_2include_2trcKernelPort_8h_source.html  FreeRTOS_2config_2trcKernelPortConfig_8h_source.html  FreeRTOS_2config_2trcKernelPortSnapshotConfig_8h_source.html  FreeRTOS_2config_2trcKernelPortStreamingConfig_8h_source.html  FreeRTOS_2include_2trcKernelPort_8h_source.html  Micrium_2config_2trcKernelPortConfig_8h_source.html  Micrium_2config_2trcKernelPortSnapshotConfig_8h_source.html  Micrium_2config_2trcKernelPortStreamingConfig_8h_source.html  Micrium_2include_2trcKernelPort_8h_source.html  MyExtension_8h_source.html  SAFERTOS_2config_2trcKernelPortConfig_8h_source.html  SAFERTOS_2config_2trcKernelPortSnapshotConfig_8h_source.html  SAFERTOS_2config_2trcKernelPortStreamingConfig_8h_source.html  SAFERTOS_2include_2trcKernelPort_8h_source.html  SEGGER__RTT_8h_source.html  SEGGER__RTT__Conf_8h_source.html  ThreadX_2config_2trcKernelPortConfig_8h_source.html  ThreadX_2config_2trcKernelPortStreamingConfig_8h_source.html  ThreadX_2include_2trcKernelPort_8h_source.html  TraceRecorderInit_8h_source.html  Usage-example.html  Zephyr_2config_2trcKernelPortConfig_8h_source.html  Zephyr_2config_2trcKernelPortSnapshotConfig_8h_source.html  Zephyr_2config_2trcKernelPortStreamingConfig_8h_source.html  Zephyr_2include_2trcKernelPort_8h_source.html  annotated.html  annotated_dup.js  aws__secure__sockets_8tzext_8h_source.html  aws__wifi_8tzext_8h_source.html  classes.html  config_2trcConfig_8h_source.html  config_2trcSnapshotConfig_8h_source.html  config_2trcStreamingConfig_8h_source.html  (+403 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  (+20 more)
extras/SDK/: readme.txt  trcSDK.c
extras/TraceRecorderInit/: TraceRecorderInit.cpp  readme.txt
include/: trcAssert.h  trcCounter.h  trcDefines.h  trcDependency.h  trcDiagnostics.h  trcEntryTable.h  trcError.h  trcEvent.h  trcEventBuffer.h  trcExtension.h  trcExtensions.h  trcHardwarePort.h  trcHeap.h  trcISR.h  trcInternalBuffer.h  trcInternalEventBuffer.h  trcInterval.h  trcMultiCoreEventBuffer.h  trcObject.h  trcPortDefines.h  trcPrint.h  trcProcess.h  trcRecorder.h  trcRunnable.h  trcStackMonitor.h  trcStateMachine.h  trcStaticBuffer.h  trcString.h  trcTask.h  trcTaskMonitor.h  trcThread.h  trcTimestamp.h  trcTypes.h  trcUtility.h
kernelports/BareMetal/: readme-baremetal.txt  trcKernelPort.c
kernelports/Cs-OS3/: trcKernelPort.c
kernelports/ESP-IDF FreeRTOS/: CMakeLists.txt  Kconfig.projbuild  lifra.fr  trcKernelPort.c
kernelports/ESP-IDF_FreeRTOS/: CMakeLists.txt  Kconfig.projbuild  esp.cmake  lifra.fr  trcKernelPort.c
kernelports/ESP-IDF_FreeRTOS/config/: trcConfig.h  trcKernelPortConfig.h  trcKernelPortSnapshotConfig.h  trcSnapshotConfig.h  trcStreamingConfig.h
kernelports/ESP-IDF_FreeRTOS/include/: trcKernelPort.h
kernelports/ESP-IDF_FreeRTOS/streamports/ESP_IDF_APPTRACE/: Kconfig  trcStreamPort.c  trcStreamingPort.c
kernelports/ESP-IDF_FreeRTOS/streamports/ESP_IDF_APPTRACE/include/: trcStreamPort.h  trcStreamingPort.h
kernelports/ESP-IDF_FreeRTOS/streamports/File/config/: trcStreamPortConfig.h
kernelports/ESP-IDF_FreeRTOS/streamports/RingBuffer/config/: trcStreamPortConfig.h
kernelports/ESP-IDF_FreeRTOS/streamports/TCPIP/config/: trcStreamPortConfig.h
kernelports/ESP-IDF_FreeRTOS/streamports/UDP/config/: trcStreamPortConfig.h
kernelports/FreeRTOS/: trcKernelPort.c
kernelports/Micrium/: trcKernelPort.c
kernelports/SAFERTOS/: trcKernelPort.c
kernelports/ThreadX/: CMakeLists.txt_README.md  trcCTI.c  trcKernelPort.c  trcKernelPortHooks.c
kernelports/Zephyr/: CMakeLists.txt  Kconfig  trcKernelPort.c
streamports/ARM_ITM/: Kconfig  Keil-uVision-Tracealyzer-ITM-Exporter.ini  Readme-ARM_ITM.txt  trcStreamPort.c  trcStreamingPort.c
streamports/File/: Kconfig  Readme-Streamport.txt  trcStreamPort.c  trcStreamingPort.c
streamports/Jlink_RTT/: Kconfig  Readme-Streamport.txt  SEGGER_RTT.c  trcStreamPort.c  trcStreamingPort.c
streamports/RingBuffer/: Kconfig  trcStreamPort.c
streamports/STM32_USB_CDC/: Kconfig  Readme-Streamport.txt  trcStreamPort.c  trcStreamingPort.c
streamports/TCPIP/: Kconfig  Readme-Streamport.txt  trcStreamPort.c  trcStreamingPort.c
streamports/TCPIP_Win32/: Readme-Streamport.txt  trcStreamPort.c  trcStreamingPort.c
streamports/UDP/: Kconfig  (+2 more)
(+122 files in other folders)
